--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -82,11 +82,8 @@
     \tl_set:ce { l__enumext_the_counter_#1_tl   } { \exp_not:c { theenumX#1 } }
   }
 \clist_map_inline:nn { i, ii, iii, iv, v, vi, vii, viii } { \__enumext_tmp:n {#1} }
-%% Variables used by |series|, |resume|, |resume*|, |reset| and |reset*| keys and \resetenumext.
+%% Variables used by |series|, |resume| and |resume*| keys.
 \tl_new:N    \l__enumext_series_name_tl
-\clist_new:N \l__enumext_reset_args_clist
-\str_new:N   \l__enumext_reset_name_str
-\int_new:N   \l__enumext_reset_level_int
 \cs_set_protected:Npn \__enumext_tmp:n #1
   {
     \bool_new:c { l__enumext_resume_#1_bool       }
@@ -2180,6 +2177,7 @@
         \tl_if_empty:nTF {#1}
           {
             \__enumext_resume_counter:n { }
+            %%\__enumext_resume_counter:
           }
           {
             \tl_if_exist:cTF { g__enumext_series_ \tl_to_str:n {#1} _ \__enumext_level: _tl }
@@ -2201,6 +2199,7 @@
         \tl_if_empty:nTF {#1}
           {
             \__enumext_resume_counter:n { }
+            %%\__enumext_resume_counter:
           }
           {
             \tl_if_exist:cTF { g__enumext_series_ \tl_to_str:n {#1} _vii_tl }
@@ -2224,7 +2223,11 @@
         \tl_set:Nn \l__enumext_series_name_tl {#1}
         \tl_if_empty:NTF \l__enumext_series_name_tl
           {
-            \__enumext_resume_counter:
+            \typeout{resume~sin~valor}
+            %%\int_show:c { g__enumext_resume_ \int_to_roman:n {\l__enumext_level_int} _int }
+            \__enumext_resume_counter:%%%n { }
+            % \int_show:c {c@enumXi}
+            \int_show:c { g__enumext_resume_ \int_to_roman:n {\l__enumext_level_int} _int }
           }
           {
             \__enumext_resume_counter_series:
@@ -2252,6 +2255,8 @@
           {
             \int_use:c {  g__enumext_resume_ \int_to_roman:n {##1} _int } + 1
           }
+        % show this
+        %\int_show:c {  g__enumext_resume_ \int_to_roman:n {##1} _int }
       }
     \int_compare:nNnT { \l__enumext_level_int } > { 0 }
       {
@@ -2358,38 +2363,49 @@
           }
       }
   }
-\NewDocumentCommand \resetenumext { s O{enumext,1} m }
+%% Definition of |\resetenumext| and internal function for this.
+\NewDocumentCommand \resetenumext { s o m }
   {
-    \clist_set:Nn \l__enumext_reset_args_clist {#2}
-    \int_compare:nTF { \clist_count:N \l__enumext_reset_args_clist > 2 }
-      {
-        \msg_error:nne { enumext-reset } { too-many-elements } {#2}
-      }
     \bool_if:nTF {#1}
       {
-        \__enumext_reset_count_resume_all:n { #3 }
+        \__enumext_reset_count_resume_all:n {#3}
       }
       {
-        \int_compare:nTF { \clist_count:N \l__enumext_reset_args_clist = 1 }
-         {
-           \__enumext_starred_reset:n {#3}
-         }
-         {
-           \int_compare:nTF { \clist_count:N \l__enumext_reset_args_clist = 2 }
-             {
-               \__enumext_standar_reset:n {#3}
-             }
-             {
-               \msg_error:nnn { enumext-reset } { invalid-clist } {#2}
-             }
-         }
+        \tl_if_novalue:nTF {#2}
+          {
+            \__enumext_reset_count_resume_levels:n {#3}
+          }
+          {
+            \str_if_eq:nnTF {#2} { * }
+              { \__enumext_starred_reset:n {#3} }
+              {
+                \bool_lazy_and:nnTF
+                  { \int_compare_p:nNn {#2} > 0 }
+                  { \int_compare_p:nNn {#2} < 5 }
+                  { \__enumext_standard_reset:nn {#2} {#3} }
+                  {
+                    \msg_error:nne { enumext } { out-of-range } { \int_eval:n {#2} }
+                  }
+              }
+          }
       }
+  }
+\cs_new_protected:Npn \__enumext_standard_reset:nn #1 %%%#2
+  {
+    \__enumext_reset_count_resume:en { \int_to_roman:n {#1} } %%%{#2}
+  }
+\cs_new_protected:Npn \__enumext_starred_reset:n #1
+  {
+    \__enumext_reset_count_resume:nn { vii } {#1}
   }
 \cs_new_protected:Npn \__enumext_reset_count_resume:nn #1 #2
   {
-    \counterwithin* {enumX#1}{#2}
-    \int_gzero:c { g__enumext_resume_ #1 _int }
+    \counterwithin*{enumX#1}{#2}
+    \int_gzero:c { g__enumext_resume_#1_int }
+    \int_gzero:c { c@enumX #1 }
+    \int_show:c {c@enumXi}
   }
+\cs_generate_variant:Nn \__enumext_reset_count_resume:nn { e }
 \cs_new_protected:Npn \__enumext_reset_count_resume_all:n #1
   {
     \clist_map_inline:nn { i,ii,iii,iv,vii }
@@ -2397,53 +2413,60 @@
         \__enumext_reset_count_resume:nn { ##1 } { #1 }
       }
   }
-\cs_new_protected:Npn \__enumext_starred_reset:n #1
+\cs_new_protected:Npn \__enumext_reset_count_resume_levels:n #1
   {
-    \str_set:Ne \l__enumext_reset_name_str { \clist_item:Nn \l__enumext_reset_args_clist {1} }
-    \str_if_eq:eeTF { \l__enumext_reset_name_str } { enumext* }
+    \clist_map_inline:nn { i,ii,iii,iv }
       {
-        \__enumext_reset_count_resume:nn {vii} {#1}
-      }
-      {
-        \msg_error:nn { enumext-reset } { invalid-single-arg-no-star }
+        \__enumext_reset_count_resume:nn { ##1 } { #1 }
       }
   }
-\cs_new_protected:Npn \__enumext_standar_reset:n #1
+%% Add |reset| and |reset*| keys for |enumext| and |enumext*|.
+\cs_set_protected:Npn \__enumext_tmp:n #1
   {
-    \str_set:Ne \l__enumext_reset_name_str { \clist_item:Nn \l__enumext_reset_args_clist {1} }
-    \int_set:Nn \l__enumext_reset_level_int { \clist_item:Nn \l__enumext_reset_args_clist {2} }
-    \str_if_eq:eeTF { \l__enumext_reset_name_str } { enumext }
+    \keys_define:nn { enumext / #1 }
       {
-        \int_case:nnF { \l__enumext_reset_level_int }
+        reset  .code:n = \__enumext_standard_reset_key:,
+        reset  .value_forbidden:n = true,
+        reset* .code:n = \__enumext_standard_reset_key_star:,
+        reset* .value_forbidden:n = true,
+      }
+  }
+\clist_map_inline:nn {level-1, level-2, level-3, level-4} { \__enumext_tmp:n {#1} }
+\keys_define:nn { enumext / enumext* }
+  {
+    reset  .code:n = \__enumext_starred_reset_key:,
+    reset  .value_forbidden:n = true,
+    reset* .code:n = \__enumext_starred_reset_key:,
+    reset* .value_forbidden:n = true,
+  }
+%% Internal functions for |reset| and |reset*| keys
+\cs_new_protected:Nn \__enumext_standard_reset_key:
+  {
+    \int_compare:nNnT { \l__enumext_level_int } > { 0 }
+      {
+        \int_if_exist:cT { g__enumext_resume_  \int_to_roman:n { \l__enumext_level_int } _int }
           {
-            { 1 }
-            {
-              \__enumext_reset_count_resume:nn
-                { \int_to_roman:n { \l__enumext_reset_level_int } } {#1}
-            }
-            { 2 }
-            {
-              \__enumext_reset_count_resume:nn
-                { \int_to_roman:n { \l__enumext_reset_level_int } } {#1}
-            }
-            { 3 }
-            {
-              \__enumext_reset_count_resume:nn
-                { \int_to_roman:n { \l__enumext_reset_level_int } } {#1}
-            }
-            { 4 }
-            {
-              \__enumext_reset_count_resume:nn
-                { \int_to_roman:n { \l__enumext_reset_level_int } } {#1}
-            }
-         }
-         {
-           \msg_error:nne { enumext-reset } { out-of-range } { \l__enumext_reset_level_int }
-         }
+            \int_gzero:c { g__enumext_resume_  \int_to_roman:n { \l__enumext_level_int } _int }
+          }
       }
+  }
+\cs_new_protected:Nn \__enumext_standard_reset_key_star:
+  {
+    \cs_set:Npn \__enumext_tmp:n ##1
       {
-        \msg_error:nne { enumext-reset } { invalid-package } { \l__enumext_reset_name_str }
+        \int_if_exist:cT { g__enumext_resume_  \int_to_roman:n {##1} _int }
+          {
+            \int_gzero:c { g__enumext_resume_  \int_to_roman:n {##1} _int }
+          }
       }
+    \int_compare:nNnT { \l__enumext_level_int } > { 0 }
+      {
+        \int_step_function:nnN { \l__enumext_level_int } { 4 } \__enumext_tmp:n
+      }
+  }
+\cs_new_protected:Nn \__enumext_starred_reset_key:
+  {
+    \int_gzero:N \g__enumext_resume_vii_int
   }
 %% Add |save-ans| key only on first level off |enumext| and |enumext*|.
 \cs_set_protected:Npn \__enumext_tmp:n #1
